src/core-crm/objects/Finance_Summary__c/Finance_Summary__c.object-meta.xml
<CustomObject>
    <description>The Finance Summary object stores financial information.</description>
    <label>Finance Summary</label>
    <nameField>
        <displayFormat>FS-{00000000}</displayFormat>
        <label>Finance Summary Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Finance Summaries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>