src/core-crm/objects/Finance_Summary__c/fields/Actual_Expense__c.field-meta.xml
<CustomField>
    <fullName>Actual_Expense__c</fullName>
    <description>The actual expenses the Start-Up Company has incurred.</description>
    <label>Actual Expense</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>