src/core-crm/objects/Finance_Summary__c/fields/Actual_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Actual_Revenue__c</fullName>
    <description>The actual revenue the Start-Up Company has generated .</description>
    <label>Actual Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>