src/core-crm/objects/Finance_Summary__c/fields/Designation__c.field-meta.xml
<CustomField>
    <fullName>Designation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the associated Designation record.</description>
    <inlineHelpText>Lookup to the associated Designation record.</inlineHelpText>
    <label>Designation</label>
    <referenceTo>Designation__c</referenceTo>
    <relationshipLabel>Finance Summaries</relationshipLabel>
    <relationshipName>Finance_Summaries</relationshipName>
    <type>Lookup</type>
</CustomField>