src/core-crm/objects/Finance_Summary__c/fields/Disbursable_Amount__c.field-meta.xml
<CustomField>
    <fullName>Disbursable_Amount__c</fullName>
    <description>The amount able to be disbursed.</description>
    <inlineHelpText>The amount able to be disbursed.</inlineHelpText>
    <label>Disbursable Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>