src/core-crm/objects/Finance_Summary__c/fields/Dividend__c.field-meta.xml
<CustomField>
    <fullName>Dividend__c</fullName>
    <description>Dividend received by QUT.</description>
    <label>Dividend</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>