src/core-crm/objects/Finance_Summary__c/fields/Finance_GL_Account__c.field-meta.xml
<CustomField>
    <fullName>Finance_GL_Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The GL Account Code for the Endowment Fund.</description>
    <inlineHelpText>The GL Account Code for the Endowment Fund.</inlineHelpText>
    <label>Finance GL Account</label>
    <referenceTo>Finance_GL_Account__c</referenceTo>
    <relationshipLabel>Finance Summaries</relationshipLabel>
    <relationshipName>Finance_Summaries</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>