src/core-crm/objects/Finance_Summary__c/fields/Finance_Summary_Date__c.field-meta.xml
<CustomField>
    <fullName>Finance_Summary_Date__c</fullName>
    <description>The date applies to the Finance Summary information for the Start-Up Company.</description>
    <label>Finance Summary Date</label>
    <type>Date</type>
</CustomField>