src/core-crm/objects/Finance_Summary__c/fields/Funds_Retained_Closing_Balance__c.field-meta.xml
<CustomField>
    <fullName>Funds_Retained_Closing_Balance__c</fullName>
    <description>Closing balance at the end of the summary period.</description>
    <inlineHelpText>Closing balance at the end of the summary period.</inlineHelpText>
    <label>Funds Retained Closing Balance</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>