src/core-crm/objects/Finance_Summary__c/fields/Funds_Retained_Opening_Balance__c.field-meta.xml
<CustomField>
    <fullName>Funds_Retained_Opening_Balance__c</fullName>
    <description>Opening balance at the start of the summary period.</description>
    <inlineHelpText>Opening balance at the start of the summary period.</inlineHelpText>
    <label>Funds Retained Opening Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>