src/core-crm/objects/Finance_Summary__c/fields/Net_Profit__c.field-meta.xml
<CustomField>
    <fullName>Net_Profit__c</fullName>
    <description>The net profit generated by the Start-Up Company.</description>
    <label>Net Profit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>