src/core-crm/objects/Finance_Summary__c/fields/Preserved_Amount__c.field-meta.xml
<CustomField>
    <fullName>Preserved_Amount__c</fullName>
    <description>The preserved amount for a Perpetual Endowment.</description>
    <inlineHelpText>The preserved amount for a Perpetual Endowment.</inlineHelpText>
    <label>Preserved Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>