src/core-crm/objects/Finance_Summary__c/fields/Valuation_Amount__c.field-meta.xml
<CustomField>
    <fullName>Valuation_Amount__c</fullName>
    <description>The Start-Up Company’s annual valuation amount.</description>
    <label>Valuation Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>