src/core-crm/objects/Finance_Summary__c/fields/Valuation_Date__c.field-meta.xml
<CustomField>
    <fullName>Valuation_Date__c</fullName>
    <description>The date of the Start-Up Company valuation.</description>
    <label>Valuation Date</label>
    <type>Date</type>
</CustomField>