src/core-crm/objects/Finance_Summary__c/fields/Valuation_URL__c.field-meta.xml
<CustomField>
    <fullName>Valuation_URL__c</fullName>
    <description>The associated document link for the annual valuation.</description>
    <label>Valuation URL</label>
    <type>Url</type>
</CustomField>