src/core-crm/objects/Finance_Summary__c/fields/Year__c.field-meta.xml
<CustomField>
    <fullName>Year__c</fullName>
    <description>The year of Finance_Summary_Date__c.</description>
    <label>Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>