src/core-crm/objects/Finance_Summary__c/recordTypes/Dividend_Summary.recordType-meta.xml
<RecordType>
    <fullName>Dividend_Summary</fullName>
    <active>true</active>
    <description>Capture the annual dividend revenue for a Start-Up Company.</description>
    <label>Dividend Summary</label>
</RecordType>