src/core-crm/objects/Finance_Summary__c/recordTypes/Endowment_Fund_Summary.recordType-meta.xml
<RecordType>
    <fullName>Endowment_Fund_Summary</fullName>
    <active>true</active>
    <description>Capture a financial summary for an Endowment Fund.</description>
    <label>Endowment Fund Summary</label>
</RecordType>