src/core-crm/objects/Finance_Summary__c/recordTypes/QUT_Finance_System.recordType-meta.xml
<RecordType>
    <fullName>QUT_Finance_System</fullName>
    <active>true</active>
    <description>Capture revenue, expenses and net profit details from QUT Finance System for a Project.</description>
    <label>QUT Finance System</label>
</RecordType>