src/core-crm/objects/Finance_Summary__c/recordTypes/Valuation.recordType-meta.xml
<RecordType>
    <fullName>Valuation</fullName>
    <active>true</active>
    <description>Capture the annual valuation for a Start-Up Company.</description>
    <label>Valuation</label>
</RecordType>