src/core-crm/objects/Finance_Summary__c/validationRules/EFS_Disbursable_Amount_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>EFS_Disbursable_Amount_is_Required</fullName>
    <active>true</active>
    <description>Checks if the Disbursable Amount field is blank when a Finance Summary with Record Type Endowment Fund Summary is created or updated.</description>
    <errorConditionFormula>AND(
 OR(
  ISNEW(),
  ISCHANGED( Disbursable_Amount__c )
 ),
 RecordType.DeveloperName = &apos;Endowment_Fund_Summary&apos;,
 OR(
  ISNULL( Disbursable_Amount__c ),
  ISBLANK( Disbursable_Amount__c )
 ) 
)</errorConditionFormula>
    <errorDisplayField>Disbursable_Amount__c</errorDisplayField>
    <errorMessage>Mandatory field</errorMessage>
</ValidationRule>