src/core-crm/objects/Finance_Summary__c/validationRules/EFS_Finance_GL_Account_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>EFS_Finance_GL_Account_is_Required</fullName>
    <active>true</active>
    <description>Checks if the Finance GL Account Lookup field is blank when a Finance Summary with Record Type Endowment Fund Summary is created or updated.</description>
    <errorConditionFormula>AND(
 OR(
  ISNEW(),
  ISCHANGED( Finance_GL_Account__c )
 ),
 RecordType.DeveloperName = &apos;Endowment_Fund_Summary&apos;,
 OR(
  ISNULL( Finance_GL_Account__c ),
  ISBLANK( Finance_GL_Account__c )
 ) 
)</errorConditionFormula>
    <errorDisplayField>Finance_GL_Account__c</errorDisplayField>
    <errorMessage>Mandatory field</errorMessage>
</ValidationRule>