src/core-crm/objects/Finance_Summary__c/validationRules/EFS_Valuation_Date_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>EFS_Valuation_Date_is_Required</fullName>
    <active>true</active>
    <description>Checks if the Valuation Date field is blank when a Finance Summary with Record Type Endowment Fund Summary is created or updated.</description>
    <errorConditionFormula>AND(
 OR(
  ISNEW(),
  ISCHANGED( Valuation_Date__c )
 ),
 RecordType.DeveloperName = &apos;Endowment_Fund_Summary&apos;,
 OR(
  ISNULL( Valuation_Date__c ),
  ISBLANK( Valuation_Date__c )
 ) 
)</errorConditionFormula>
    <errorDisplayField>Valuation_Date__c</errorDisplayField>
    <errorMessage>Mandatory field</errorMessage>
</ValidationRule>