src/core-crm/objects/Finance_Summary__c/validationRules/Year_Number_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Year_Number_Validation</fullName>
    <active>true</active>
    <description>This validation rule ensures that only numeric values are entered in the Year__c field. Non-numeric characters are not allowed and will trigger an error message.</description>
    <errorConditionFormula>AND(
  NOT(ISNUMBER(Year__c)),
  NOT(ISBLANK(Year__c)),
  OR( RecordType.DeveloperName=&apos;Valuation&apos;,
      RecordType.DeveloperName=&apos;Dividend_Summary&apos;)
)</errorConditionFormula>
    <errorDisplayField>Year__c</errorDisplayField>
    <errorMessage>Please input a valid year</errorMessage>
</ValidationRule>